--- a/src/component/ToDoApp.css
+++ b/src/component/ToDoApp.css
@@ -1,11 +1,30 @@
 .todoContainer {
-  background-color: #fefefe;
+  background-color: #f8f8f8;
   border-radius: 12px;
   padding: 20px;
   width: 350px;
   height: 100vh;
   margin: 40px auto;
+  text-align: center;
+  max-width: 400px;
+
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+button {
+  margin: 5px;
+  padding: 8px 12px;
+  font-size: 14px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+button:hover {
+  opacity: 0.8;
+}
+.input {
+  padding: 8px;
+  width: 70%;
+  font-size: 16px;
 }
 .input-area {
   display: flex;
@@ -32,6 +51,10 @@
   margin-bottom: 6px;
   border-radius: 6px;
 }
+.task-list li button {
+  float: right;
+}
+
 .task {
   padding: 20px;
   font-size: 20px;
