--- a/src/component/ToDoApp.css
+++ b/src/component/ToDoApp.css
@@ -1,5 +1,11 @@
+body {
+  background-color: #f8f8f8;
+  margin: 0;
+  padding: 0;
+}
 .todoContainer {
   background-color: #f8f8f8;
+  max-width: 600px;
   border-radius: 12px;
   padding: 10px;
   width: 4000px;
@@ -86,3 +92,10 @@ li span {
   align-items: center;
   margin-left: 8px 0;
 } */
+
+@media (max-width: 600px) {
+  .todoContainer {
+    max-width: 95%;
+    padding: 15px;
+  }
+}
